# autocube-numerator

./: .gitignore  README.md  pyproject.toml
src/: config.py  contoller.py  exceptions.py  main.py  model.py  styles.py  view.py
