[tool.poetry]
name = "autocube-numerator"
version = "0.1.0"
description = ""
authors = ["nktrnv <nktrnv@gmail.com>"]
readme = "README.md"
packages = [{include = "autocube_numerator"}]

[tool.poetry.dependencies]
python = "3.11.x"
ydb = {extras = ["yc"], version = "^3.4.0"}
google-cloud-core = "^2.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
